--- a/Applications/App Market.app/Localizations/Russian.lang
+++ b/Applications/App Market.app/Localizations/Russian.lang
@@ -96,6 +96,7 @@
 	license = "Лицензия",
 	category = "Категория",
 	updated = "Обновлено",
+	uniqueDownloads = "Уникальных скачиваний",
 	reviews = "Отзывы",
 	yourRating = "Оцените приложение",
 	writeReviewHere = "Пишите отзыв здесь",
