--- a/Applications/Picture Edit.app/Localizations/Japanese.lang
+++ b/Applications/Picture Edit.app/Localizations/Japanese.lang
@@ -6,7 +6,7 @@
 	path = "道：",
 	save = "保存する",
 	saveAs = "名前を付けて保存",
-	ok = "Ok",
+	ok = "わかりました",
 	cancel = "キャンセル",
 	fileName = "ファイル名",
 	newPicture = "新しい絵",
@@ -36,7 +36,7 @@
 		"F-点字ツール",
 		null,
 		"X-色を切り替える",
-		"D-描画色をリセットします",
+		"D-描画色をリセットします"
 	},
 	tool1 = "選択ツールを使用すると、画像上の優先領域を選択し、その領域でいくつかの操作を実行できます。",
 	fill = "塗りつぶし",
@@ -87,5 +87,5 @@
 	transparency = "透明性：",
 	force = "力",
 	rasterizePolygon = "ポリゴンをラスタライズする",
-	polygonEdges = "ポリゴンエッジの数：",
+	polygonEdges = "ポリゴンエッジの数："
 }
