--- a/Applications/VK.app/Localizations/Dutch.lang
+++ b/Applications/VK.app/Localizations/Dutch.lang
@@ -1,17 +1,17 @@
 {
 	leftBarOffset = 5,
-
+	
 	settingsStyle = "Kleurschema",
 	settingsAdditional = "Aanvullende eigenschappen",
-
+	
 	invalidPassword = "Ongeldige login of wachtwoord",
 	username = "E-mail of telefoon nummer",
 	password = "Wachtwoord",
 	login = "Log in",
 	twoFactorEnabled = "2FA enthalten",
-	twoFactor = "2FA code",
+	twoFactor = "2FA-code",
 	saveLogin = "Sla login informatie op:",
-
+	
 	loadCountConversations = "Het aantal geladen dialogen",
 	loadCountMessages = "Aantal te downloaden berichten",
 	loadCountNews = "Aantal gedownloade nieuws",
@@ -19,7 +19,7 @@
 	loadCountWall = "Aantal te downloaden berichten",
 	loadCountFriends = "Aantal vrienden om te downloaden",
 	loadCountDocs = "Aantal te downloaden documenten",
-
+	
 	profile = "Profiel",
 	message = "Bericht",
 	sendMessage = "Verzend bericht",
@@ -27,13 +27,28 @@
 	friendRequestSent = "Verzoek is verzonden",
 	userSubscribedToYou = "Geabonneerd op jou",
 	userIsYourFriend = "Je hebt vrienden",
-
+	
 	profileCounters = {
-		{ field = "followers", description = " volgers" },
-		{ field = "friends", description = " vrienden" },
-		{ field = "photos", description = " foto's" },
-		{ field = "videos", description = " video's" },
-		{ field = "audios", description = " audio" },
+		{
+			field = "followers",
+			description = " volgers"
+		},
+		{
+			field = "friends",
+			description = " vrienden"
+		},
+		{
+			field = "photos",
+			description = " foto's"
+		},
+		{
+			field = "videos",
+			description = " video's"
+		},
+		{
+			field = "audios",
+			description = " audio"
+		}
 	},
 	profileShowAdditional = "Toon details",
 	profileHideAdditional = "Verberg gedetailleerde informatie",
@@ -66,7 +81,7 @@
 		peopleMain = "Belangrijkste personen",
 		lifeMain = "Het belangrijkste in het leven",
 		alcohol = "alcohol",
-		smoking = "roken",
+		smoking = "roken"
 	},
 	months = {
 		"januari",
@@ -80,7 +95,7 @@
 		"september",
 		"oktober",
 		"november",
-		"december",
+		"december"
 	},
 	relationStatuses = {
 		{
@@ -92,7 +107,7 @@
 			"nogsteeds op zoektocht",
 			"minnaar",
 			"in het burgerlijk huwelijk",
-			[0] = "niet gespecificeerd",
+			[0] = "niet gespecificeerd"
 		},
 		{
 			"Niet getrouwd",
@@ -103,7 +118,7 @@
 			"nogsteeds op zoektocht",
 			"minnares",
 			"in het burgerlijk huwelijk",
-			[0] = "niet gespecificeerd",
+			[0] = "niet gespecificeerd"
 		}
 	},
 	personalPoliticalTypes = {
@@ -115,7 +130,7 @@
 		"Monarchaal",
 		"Ultraconservatieve",
 		"Onverschillig",
-		"libertarian",
+		"libertarian"
 	},
 	personalPeopleMainTypes = {
 		"Intelligentie en creativiteit",
@@ -123,7 +138,7 @@
 		"Vriendelijkheid, schoonheid en gezondheid",
 		"Macht en rijkdom",
 		"Moed en doorzettingsvermogen",
-		"Humor en liefde voor het leven",
+		"Humor en liefde voor het leven"
 	},
 	personalLifeMainTypes = {
 		"Familie en kinderen",
@@ -133,22 +148,22 @@
 		"De wereld verbeteren",
 		"Zelfontwikkeling",
 		"Schoonheid en kunst",
-		"Roem en invloed",
+		"Roem en invloed"
 	},
 	personalBlyadTypes = {
 		"Scherp negatief",
 		"Negatief",
 		"Compromis",
 		"Neutraal",
-		"Positief",
+		"Positief"
 	},
-
+	
 	friends = "Vrienden",
 	friendsOnline = "Online Vrienden",
 	friendsMutual = "Gemeenschappelijke vrienden",
-
+	
 	news = "Nieuwsfeed",
-
+	
 	send = "Verzenden",
 	conversations = "Conversaties",
 	you = "Jij: ",
@@ -167,15 +182,15 @@
 		wall_reply = "herplaatsen",
 		sticker = "sticker",
 		gift = "cadeau",
-		audio_message = "audio",
+		audio_message = "audio"
 	},
 	sentFromMineOS = " (Verzonden via de MineOS VK Client)",
 	
 	documents = "Documenten",
 	documentsCount = "Totaal aantal documenten",
-	documentsAdd = "Upload document",
-
+	documentsAdd = "Document uploaden",
+	
 	settings = "Instellingen",
-
-	exit = "Log uit",
+	
+	exit = "Log uit"
 }
