--- a/Applications/App Market.app/Localizations/Ukrainian.lang
+++ b/Applications/App Market.app/Localizations/Ukrainian.lang
@@ -14,14 +14,14 @@
 	yourText = "Ви:",
 	hereBeYourDialogs = "Тут будуть відображені ваші діалоги",
 	hideApplicationIcons = "Приховати значки програм",
-
+	
 	categoryOverview = "Головна",
 	categoryApplications = "Додатки",
 	categoryLibraries = "Бібліотеки",
 	categoryScripts = "Скрипти",
 	categoryUpdates = "Оновлення",
 	categoryWallpapers = "Шпалери",
-
+	
 	statisticsNewUser = "Новий користувач",
 	statisticsMostPopularUser = "Найбільш активний",
 	statisticsUsersCount = "Число користувачів",
@@ -29,7 +29,7 @@
 	statisticsReviewsCount = "Число відгуків",
 	statisticsPopularPublication = "(Популярна публікація)",
 	statisticsMessagesCount = "Число повідомлень",
-
+	
 	whatsNew = "Що нового",
 	whatsNewInVersion = "Що нового у версії",
 	areYouSure = "Ви впевнені, що хочете видалити публікацію?",
@@ -53,8 +53,8 @@
 	add = "Додати",
 	relativePath = "Відносний шлях",
 	localizationDependency = "Файл локалізації",
-
 	login = "Авторизація",
+	
 	profile = "Профіль",
 	nickname = "Нікнейм",
 	password = "Пароль",
@@ -74,8 +74,8 @@
 	notRegistered = "Ще не зареєстровані?",
 	createAccount = "Створити акаунт",
 	registrationSuccessfull = "Перевірте свою пошту (і папку спаму), щоб підтвердити аккаунт",
-
 	search = "Пошук",
+	
 	byPopularity = "За популярністю",
 	byRating = "За рейтингом",
 	byDate = "По даті",
@@ -89,8 +89,8 @@
 	page = "Сторінка",
 	updateAll = "Оновити все",
 	noUpdates = "У вас найновіше ПЗ",
-
 	changeReview = "Змінити відгук",
+	
 	developer = "Розробник",
 	version = "Версія",
 	license = "Ліцензія",
@@ -109,5 +109,7 @@
 	no = "Ні",
 	of = "з",
 	usersLoveReview = "користувачів вважають цей відгук корисним",
-	thanksForVote = "Дякую за вашу думку"
+	thanksForVote = "Дякую за вашу думку",
+	previewDepencency = "Попередній перегляд зображення",
+	uniqueDownloads = "Унікальні завантаження"
 }
